Testing speech box

--- a/gui/gui.html
+++ b/gui/gui.html
@@ -1,3 +1,8 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <p>Welcome to Cyberunk Net</p>
+  <p></p>
 </html>
