added <div class="speech">

--- a/gui/gui.html
+++ b/gui/gui.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="style.css">
   </head>
-  <p>Welcome to Cyberunk Net</p>
-  <p></p>
+  <div class="speech">
+  <body>
+    <p>Welcome to Cyberunk Net</p>
+    <p></p>
+  </body>
 </html>
