--- a/gui/gui.html
+++ b/gui/gui.html
@@ -3,9 +3,10 @@
   <head>
     <link rel="stylesheet" href="style.css">
   </head>
-  <div class="speech">
   <body>
-    <p>Welcome to Cyberunk Net</p>
-    <p></p>
+    <div class="speech">
+      <p>Welcome to Cyberunk Net</p>
+      <p>Test GUI</p>
+    </div>
   </body>
 </html>
