--- a/gui/gui.html
+++ b/gui/gui.html
@@ -6,6 +6,7 @@
   <body>
     <div class="speech">
       <p>Welcome to Cyberunk Net</p>
+      <p>i am alan</p>
       <p>Test GUI</p>
     </div>
   </body>
