minor changes +options

--- a/gui/gui.html
+++ b/gui/gui.html
@@ -5,9 +5,11 @@
   </head>
   <body>
     <div class="speech">
-      <p>Welcome to Cyberunk Net</p>
-      <p>i am alan</p>
-      <p>Test GUI</p>
+      <p>
+        Welcome to Cyberunk Net.
+        <br>
+        Would you like an tutorial?
+      </p>
     </div>
   </body>
 </html>
